@@ -28,6 +28,13 @@ class Region
 
     public $owner;
     public $_ip4Map;
+
+
+    private $members = array();
+
+    /** @var DOMElement */
+    private $membersRoot = null;
+
     /**
      * you should not need this one for normal use
      * @param string $name
@@ -74,6 +81,29 @@ class Region
         if( $this->name === FALSE )
             derr("region name not found\n");
 
+        $this->membersRoot = DH::findFirstElement('address', $xml);
+
+        if( $this->membersRoot !== FALSE )
+        {
+            foreach( $this->membersRoot->childNodes as $member )
+            {
+                if( $member->nodeType != 1 ) continue;
+
+                $this->members[] = $member->textContent;
+            }
+        }
+
+        /*
+      <entry name="NAME">
+        <geo-location>
+          <latitude>59.335</latitude>
+          <longitude>18.063</longitude>
+        </geo-location>
+        <address>
+          <member>10.2.0.0/16</member>
+        </address>
+      </entry>
+         */
 
         return TRUE;
     }
@@ -137,9 +167,14 @@ class Region
 
     public function value()
     {
-        return "region";
+        $string = implode( ", ", $this->members);
+        return $string;
     }
 
+    public function members()
+    {
+        return $this->members;
+    }
 
     static protected $templatexml = '<entry name="**temporarynamechangeme**"><address><member>tempvaluechangeme</member></entry>';
 }
