@@ -1763,6 +1763,16 @@
                     }
                 }
             },
+            "template-clone": {
+                "name": "template-clone",
+                "MainFunction": {},
+                "args": {
+                    "newname": {
+                        "type": "string",
+                        "default": "false"
+                    }
+                }
+            },
             "template-create": {
                 "name": "template-create",
                 "MainFunction": {},
